<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FourSure</string>
    <string name="app_title">FourSure</string>
    <string name="button1_text">i</string>
    <string name="hello_world2">Settings Page</string>
    <string name="button_save_text">Save</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="start">Click to access files</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="user_name_label">User Name:</string>
    <string name="peer_count_label">Peers required:</string>
    <string name="challenge_label">Current challenge:</string>
    <string name="challenge_change">Tap to select challenge</string>
    <string name="chal_none">none</string>
    <string name="chal_location">location</string>
    <string name="chal_knowledge">knowledge</string>
    <string name="chal_behavior">behavior</string>
    <string name="chal_wearable">wearable</string>
    <string name="chal_pin">pin</string>
    <string name="chal_time">pin</string>
    <string name="id_type_none">none</string>
    <string name="id_type_facebook">facebook</string>
    <string name="id_type_twitter">twitter</string>
    <string name="id_type_gplus">gplus</string>
    <string name="id_type_linkedin">linkedin</string>
    <string name="id_type_email">email</string>
    <string name="id_type_sms">sms</string>
    <string name="storage_type_dropbox">dropbox</string>
    <string name="storage_type_gdrive">gdrive</string>
    <string name="storage_type_evernote">evernote</string>
    <string name="storage_type_box">box</string>
    <string name="show_chal_indicator">Show Challenge Indicator</string>
    <string name="connect_id">ENTER YOUR EMAIL</string>
    <string name="select_storage">CONNECT STORAGE</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">LOGOUT</string>
    <string name="failed">FAILED</string>
    <string name="peers_activity_name">Peers</string>
    <string name="file_display_activity_name">File</string>
    <string name="failure_activity_name">Failure</string>
    <string name="peer_count_change">Tap to select peer count</string>
    <string name="reset_session">Reset Session</string>
    <string name="share">SHARE</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="back">BACK</string>
    <string name="shield">SHIELD</string>
    <string name="track">TRACK</string>
    <string name="check">CHECK</string>
    <string name="done">DONE</string>
    <string name="enter_id">Secret</string>
    <string name="select_factor">SELECT YOUR FACTOR</string>
    <string name="settings_1_activity_name">Settings 1</string>
    <string name="settings_2_activity_name">Settings 2</string>
    <string name="settings_3_activity_name">Settings 3</string>
    <string name="share_1_activity_name">Share Create</string>
    <string name="share_2_activity_name">Share Success</string>
    <string name="done_activity_name">Done</string>
    <string name="select_share_factor">CHOOSE SECURITY</string>
    <string name="share_type_link">PASTE / TYPE SHARE</string>
    <string name="share_type_text">TEXT</string>
    <string name="share_type_ping">PING</string>
    <string name="share_more">Share some more</string>
    <string name="receive">GET ASSET</string>
    <string name="secret">Secret</string>
    <string name="enter_shield">ENTER SHIELD URL</string>
    <string name="location">Location</string>
    <string name="here">Here (5 mi)</string>
    <string name="nearby">Nearby (50 mi)</string>
    <string name="region">Region (500 mi)</string>
    <string name="anywhere">Anywhere</string>
    <string name="wearable">Wearable</string>
    <string name="behavior">Behavior</string>
    <string name="pin">PIN</string>
    <string name="time">Time</string>
    <string name="pebbleClassic">Pebble Classic</string>
    <string name="pebbleTime">Pebble Time</string>
    <string name="samsungGear">Samsung Gear</string>
    <string name="none">None</string>
    <string name="touch">Touch</string>
    <string name="error">Error</string>
    <string name="oneminute">One Minute</string>
    <string name="onehour">One Hour</string>
    <string name="oneday">One Day</string>
    <string name="oneweek">One Week</string>
    <string name="unable_to_signup_please_try_again">Unable to signup, please try again</string>
    <string name="unable_to_save_settings_please_try_again">Unable to save settings, please try again</string>
    <string name="unable_to_launch_liveensure">Unable to launch LiveEnsure</string>
    <string name="registration_failed_please_try_again">Registration failed, please try again</string>
    <string name="unable_to_access_share">Unable to access share</string>
    <string name="authentication_failed">Unable to access share, please try again</string>
    <string name="comms_error">Error communicating with service. Please try again</string>
    <string name="unable_to_register_device">Unable to register device</string>
    <string name="please_register_first">Please register first</string>

    <string name="title_location_permission">Access Location</string>
    <string name="text_location_permission">App needs to access your location.</string>
    <string name="ok">Ok</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="tirn_on_gps">Please turn on your GPS from settings.</string>

</resources>