<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/lyt_main_graphics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="100" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="15"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lbl_error_title"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/graphics_middle_lyt"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="27" >

            <ImageView
                android:id="@+id/img_graphic_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/failed"
                android:src="@drawable/fail_512" />
        </RelativeLayout>

        <TextView
            android:id="@+id/graphics_bottom_padding"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lbl_error_message"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/failed"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="16"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/lyt_btn_failure"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="9"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="100" >

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="27"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/failed_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button1_text"
                android:gravity="right"
                android:scaleType="fitCenter"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/failed_help"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="16"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button1_text"
                android:gravity="right"
                android:scaleType="fitCenter"
                android:src="@drawable/help" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="27"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3"
            android:visibility="invisible" />
    </LinearLayout>

</FrameLayout>